[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/PlacementNode.gd" type="Script" id=1]
[ext_resource path="res://assets/new_arraymesh3.tres" type="ArrayMesh" id=2]

[sub_resource type="SphereShape" id=1]
radius = 0.5

[sub_resource type="SpatialMaterial" id=2]
resource_local_to_scene = true

[node name="PlacementNode" type="StaticBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Sphere" type="CSGSphere" parent="."]
radius = 0.2
material = SubResource( 2 )

[node name="TileMesh" type="MeshInstance" parent="."]
visible = false
mesh = ExtResource( 2 )
material/0 = null
material/1 = null

[connection signal="input_event" from="." to="." method="_on_PlacementNode_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_PlacementNode_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PlacementNode_mouse_exited"]
